Initial commits (User, User repository, UserService, CrudService, Jwt conf, WebSecurity Conf

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,36 @@
 
+#MySQL local database
+spring.datasource.url=jdbc:mysql://localhost:3306/iotv2_database?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=rootadmin
+
+#Initialize database on startup against the database (create, create-drop, validate, update).
+spring.jpa.hibernate.ddl-auto=create
+
+#Not able to send data when is false, error -> Could not write JSON: failed to lazily initialize a collection of role
+#Unfortunately, OSIV (Open Session in View) is enabled by default in Spring Boot, and OSIV is really a bad idea from a performance and scalability perspective.
+spring.jpa.open-in-view=true
+
+
+#Mode to apply when determining if DataSource initialization should be
+# performed using the available DDL and DML scripts. (always, embedded, never)
+spring.datasource.initialization-mode = always
+
+#Whether to stop if an error occurs while initializing the database.
+spring.datasource.continue-on-error = true
+
+#`hibernate_sequence' doesn't exist
+spring.jpa.hibernate.use-new-id-generator-mappings=true
+
+#dialect hibernate for the database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+#Whether to enable logging of SQL statements.
+spring.jpa.show-sql=false
+
+spring.jpa.properties.hibernate.format_sql=true
+
+
+jwt.secret.key: IoTv2_SK_TUKE_FEI_KPI
+jwt.expiration: 86400
+jwt.authority.key: icube.secret.key
