--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -30,6 +30,8 @@ spring.jpa.show-sql=false
 
 spring.jpa.properties.hibernate.format_sql=true
 
+springdoc.swagger-ui.path=/swagger-ui.html
+
 
 jwt.secret.key: IoTv2_SK_TUKE_FEI_KPI
 jwt.expiration: 86400
