--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#Actual URL of Swagger OpenApi definition:
+# http://localhost:8082/swagger-ui/index.html?url=/v3/api-docs&validatorUrl=#/default/save
+
+server.port=8082
 
 #MySQL local database
 spring.datasource.url=jdbc:mysql://localhost:3306/iotv2_database?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
