--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=root
 spring.datasource.password=rootadmin
 
 #Initialize database on startup against the database (create, create-drop, validate, update).
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #Not able to send data when is false, error -> Could not write JSON: failed to lazily initialize a collection of role
 #Unfortunately, OSIV (Open Session in View) is enabled by default in Spring Boot, and OSIV is really a bad idea from a performance and scalability perspective.
